- Fixed data/attr return value issue with jQuery prior to version 1.7.2 (Drupal 7 - jQuery 1.7.1 compatibility) - Added lazyPreloadDisplays : 0 (preload a specified number of displays)

--- a/changelog.html
+++ b/changelog.html
@@ -55,6 +55,15 @@
           <h1>Changelog</h1>
 
           <div class="span12 log">
+          <span class="label label-info">v1.3.2 (modifications)</span> <span class="label">17.02.2014</span>
+            <ul>
+              <li>Drupal 7 - jQuery 1.7.1 compatibility</li>
+              <li>Fixed data/attr return value issue with jQuery prior to version 1.7.2</li>
+              <li>Added <code>lazyPreloadDisplays : 0</code></li>
+            </ul>
+          </div>
+
+          <div class="span12 log">
           <span class="label label-success">v1.3.2</span> <span class="label">13.01.2014</span>
             <ul>
               <li>Changed semantic versioning v1.32 > v1.3.2</li>
